Prevent table from overflowing. Put links into side navigation

--- a/technical-documentation/css/style.css
+++ b/technical-documentation/css/style.css
@@ -1,6 +1,7 @@
 html, body {
   font-family: "Open Sans", Arial, "Lucida Grande", sans-serif;
   color: #616161;
+  font-size: 13px;
 }
 
 p {
@@ -14,10 +15,10 @@ code {
 
 pre {
   background-color: #f5f5f5;
-  padding: 0.9em;
+  padding: 0.9em 0 0 0;
   overflow-x: auto;
   white-space: pre;
-  font-size: 0.77em;
+  font-size: 1em;
   line-height: 1.6em;
   margin: 2em 0;
   word-wrap: break-word;
@@ -58,6 +59,10 @@ h1 {
   line-height: 1.143em;
 }
 
+h2 {
+  font-size: 1.875em;
+}
+
 h3 {
   font-size: 1.12em;
   margin-bottom: 0.3em;
@@ -66,6 +71,8 @@ h3 {
 
 /* Tables */
 table {
+  table-layout: fixed;
+  width: 100%;
   font-size: 13px;
   border-collapse: collapse;
   line-height: 1.5em;
@@ -75,6 +82,7 @@ td, th {
   padding: 1em 1.5em;
   text-align: left;
   border: 1px solid #dcdcdc;
+  word-wrap: break-word;
 }
 
 th {
@@ -117,4 +125,8 @@ th {
   display: block;
   padding: 1em 1em 0.8em 0.6em;
   margin-bottom: 0.8em;
+}
+
+.right-nav .nav-box a {
+  color: #000;
 }
